modularised the application